# haskell-challenge

./: scheme-haskell.cabal
app/: Main.hs
