cabal-version:      3.8
name:               scheme-haskell
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/duksosleepy/haskell-challenge
license:            BSD-3-Clause
license-file:       LICENSE
author:             Song Khoi
maintainer:         songkhoi123@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable scheme-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: GHC2024
